fix: display of header background image on mobile screen

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -77,7 +77,7 @@ body {
 .header {
     background-color: #888;
     background-image: url('../images/header-background.png');
-    background-size: 100% 100%;
+    background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: center;
     min-height: 100vh;
